tests/good/12_var_init.src
# Test: Variable declaration with initialization
# Expected: 42
void main() {
    int x = 42;
    print_int(x);
}
