tests/bad/17_missing_body.src
# Test: Missing function body
void main();  # Missing function body
